# modsynth

./: .build.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Run_modsynth_(1)_2024-01-24-115241.collapsed  manifest-sections.md
.cargo/: config.toml
.github/workflows/: ci.yaml  rust-clippy.yml  rust.yml
examples/: live-visualization.rs  sin_test.rs
gssp_utils/: Cargo.toml
src/: audio_environment.rs  audio_host.rs  lib.rs  live_visualization.rs  main.rs  osc_math.rs  osc_shapes.rs  stream_handling.rs
synth_utils/: Cargo.toml
tests/: sin_test.rs  sqr_test.rs
