[package]
name = "modsynth"
version = "0.1.0"
authors = ["gsspdev"]
edition = "2021"
rust-version = "1.74.1"
description = "A modular synthesizer written in Rust."
repository = "https://github.com/gsspdev/modsynth"

[workspace]
workspace = { members = ["synth_utils", "tests", "benches", "examples"] }

[dependencies]
tempdir = "0.3.7"
rand = "0.8.4"
cc = "1.0.67"
regex = "1.5.5"
serde = { version = "1.0.193", features = ["alloc", "derive", "rc"] }
cpal = { version = "0.15.2", features = ["asio", "jack", "wasm-bindgen", "oboe-shared-stdcxx"] }
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["env"] }

# [dependencies]
# synth_utils = { path = "synth_utils" }

# Build-dependencies are used only when compiling a package for building.
# [build-dependencies]
# cc = { workspace = true }

# Dev-depencies are used for compiling tests, examples, and benchmarks.
# They are not used when compiling for building, and not propogated to other packages
# [dev-dependencies]
# regex = { workspace = true}
# rand = { workspace = true }
